[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["shreenapatel <shreena88@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.2.3"
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^6.0.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
